--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Base.Theme.Hra3"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".First"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -21,6 +21,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
 
         <activity
